가중치 제거, 랜덤